# Edge_AI_Perf

./: EmissionsFactor_Calculation.md  README.md  edge_hardware_table.md  lib_edge_eval.py  manifest.in  pyproject.toml
learn/: Helper.ipynb  Lab01_TinyML_ExecuTorch_Signal_Data_Model.ipynb
learn/EdgeAI/: lab01_pte_quiz.json
learn/yolov10x/: README.md  index.html  run.txt
lib_edge_eval/: __init__.py  lib_edge_eval.py
